examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-redirector
  labels:
    app.kubernetes.io/name: domain-redirector
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: domain-redirector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: domain-redirector
        app.kubernetes.io/component: backend
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        runAsNonRoot: true
      containers:
        - name: domain-redirector
          image: registry.example.com/public/domain-redirector:0.1.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.2"
          startupProbe:
            httpGet:
              path: /metrics
              port: http
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

---
kind: Service
apiVersion: v1
metadata:
  name: domain-redirector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: domain-redirector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
