examples/httproute_domain-redirector.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: domain-redirector
  namespace: default
spec:
  parentRefs:
    - name: gateway-v1
      sectionName: http
      namespace: envoy-gateway-system
  hostnames:
    - "example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: domain-redirector
          port: 80
      timeouts:
        request: "120s"
